# minicraft

./: Cargo.toml  README.md
src/: blocks.rs  camera.rs  dynamic shaders attempt.rs1  main.rs
src/shaders/: fragment copy.glsl  fragment.glsl  shader.wgsl  vertex copy.glsl  vertex.glsl
src/textures/: atlas.tga  atlas1.png~  atlas1.xcf
