[package]
name = "minicraft"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
vulkano = "0.24"
vulkano-shaders = "0.24"
image = "0.23"
winit = "0.25"
vulkano-win = "0.24"
png = "0.16"
ron = "0.6"
cgmath = "0.18"
bitflags = "1.3.2"
noise = "0.7.0"
tracy-client = "0.12.6"

[features]
default = ["enable"]
enable = []