[package]
name = "minicraft"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
image = "0.23"
png = "0.16"
ron = "0.6"
cgmath = "0.18"
bitflags = "1.3.2"
noise = "0.7.0"
tracy-client = "0.12.6"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }

[features]
default = ["enable"]
enable = []
